[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "buffered-async-iterators"
dynamic = ["description", "version"]

classifiers = [
    "Framework :: AsyncIO",
    "Development Status :: 6 - Mature",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Typed"
]

keywords = ["asyncio", "buffered", "iterator"]

license = {text = "mit"}
readme = "README.md"

requires-python = ">=3.7"

[project.urls]
"Bug Tracker" = "https://github.com/SimpleArt/buffered-async-iterators/issues"
"Repository" = "https://github.com/SimpleArt/buffered-async-iterators"

[tool.setuptools.dynamic]
version = {attr = "buffered_async_iterators.__version__"}
